# mkdoc-sample

./: .gitignore  VERSION_LANGUAGE_GUIDE.md  main.py  mkdocs.yml  pyproject.toml
0.1/: 404.html  index.html  sitemap.xml
0.1/ja/: index.html
0.1/search/: search_index.json
0.1/zh/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/ja/: index.html
0.2/ja/page/: index.html
0.2/page/: index.html
0.2/search/: search_index.json
0.2/zh/: index.html
0.2/zh/page/: index.html
0.3/: 404.html  index.html  page-1.html  page-2.html  sitemap.xml
0.3/ja/: index.html  page-1.html  page-2.html
0.3/search/: search_index.json
0.3/zh/: index.html  page-1.html  page-2.html
docs/: index.ja.md  index.md  index.zh.md  page-1.ja.md  page-1.md  page-2.md  page.md  page.zh.md
docs/javascripts/: shortcuts.js
site/: 404.html  index.html  sitemap.xml
site/ja/: index.html
site/search/: search_index.json
site/zh/: index.html
