[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodes-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/nodes"]

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-static-i18n>=1.3.0",
]
